add_executable(test1 test1.cpp)
add_executable(test2 test2.cpp)
add_executable(test3 test3.cpp)
add_executable(test4 test4.cpp)
add_executable(test5 test5.cpp)
add_executable(test6 test6.cpp)

#add_subdirectory(../graphutils)
#list(APPEND MAIN_LIBS Graphutils)
include_directories("${CMAKE_CURRENT_SOURCE_DIR}/../graphutils") 

target_link_libraries(test1 PRIVATE ${MAIN_LIBS})
target_link_libraries(test2 PRIVATE ${MAIN_LIBS})
target_link_libraries(test3 PRIVATE ${MAIN_LIBS})
target_link_libraries(test4 PRIVATE ${MAIN_LIBS})
target_link_libraries(test5 PRIVATE ${MAIN_LIBS})
target_link_libraries(test6 PRIVATE ${MAIN_LIBS})
